--- a/_posts/2017-11-27-media.md
+++ b/_posts/2017-11-27-media.md
@@ -1,12 +1,12 @@
 ---
 layout: post
- 
+title: 学习日志
 date: 2019-7-1
 
-author: hanuman
+
 ---
 
-## 学习日志
+
 
 1. 通过阅读jekyll的官方文档和使用github搭建了一个个人博客，博客用来显示学习日志
 2. jekyll的安装
