--- a/_posts/2017-11-27-media.md
+++ b/_posts/2017-11-27-media.md
@@ -4,18 +4,12 @@ title: 学习日志
 date: 2019-7-1
 ---
 
-1. 通过阅读jekyll的官方文档和使用github搭建了一个个人博客
-
-
-
-1. jekyll的安装
+1. 通过阅读jekyll的官方文档和使用github搭建了个人博客
+2. jekyll的安装
    1. jekyll需要gem，gem是通过ruby安装的，所以需要先安装ruby环境，通过rubygems来安装jekyll
    2. jekyll new创建一个小型网站
-   3. bundle exec jekyll serve构建站点可以在本地服务器运行（端口为4000）
-
-
-
-1. jekyll的目录结构
+   3. bundle exec jekyll serve构建站点可以在本地服务器运行(端口为4000)
+3. jekyll的目录结构
    1. `_posts`文件夹就是放markdown格式的博客的.
    2. `_includes`用于放子模版
    3. `_layouts`用于放父模板
